--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'http://elliotdurkee.com/'
 languageCode = 'en-us'
 title = 'welcome.'
 theme = 'nostyleplease'
