--- a/themes/nostyleplease/config.toml
+++ b/themes/nostyleplease/config.toml
@@ -30,6 +30,6 @@
 
 [params]
   [params.theme_config]
-    appearance = "auto"
+    appearance = "light"
     back_home_text = ".."
     date_format = "2006-01-02"
