added some stuff to menu

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -5,6 +5,9 @@ title = "info"
   title = "github repo"
   url = "https://github.com/riggraz/no-style-please"
 
+  [[entries.entries]]
+  title = "built with HUGO, Netlify, and Github"
+
 [[entries]]
 title = "all posts"
 
