added link to my github repo

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -3,7 +3,7 @@ title = "info"
 
   [[entries.entries]]
   title = "github repo"
-  url = "https://github.com/riggraz/no-style-please"
+  url = "https://github.com/edurkee/quickstart"
 
   [[entries.entries]]
   title = "built with HUGO, Netlify, and Github"
