--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://elliotdurkee.com/'
 languageCode = 'en-us'
-title = 'welcome.'
+title = 'so glad you could make it'
 theme = 'nostyleplease'
