edited the menu

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -4,6 +4,9 @@ title = "info"
   [[entries.entries]]
   title = "contact me: youcangetelliot@gmail.com"
   url = "youcangetelliot@gmail.com"
+  [[entries.entries]]
+  title = "currently not reachable by my regular phone number. reach the 
+same number on Whatsapp."
 
   [[entries.entries]]
   title = "Powered by HUGO, Netlify, Github, and a team of six reindeer"
