--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -25,12 +25,10 @@ title = "all posts"
   show_more_url = "posts"
 
 [[entries]]
-title = "posts by category"
+title = "post categories"
 
-  [entries.post_list]
-  section = "posts"
-  show_more = true
-  show_more_text = "See more posts..."
-  show_more_url = "posts"
+  [[entries.entries]]
+  title = "taiwan blog"
+  url = "elliotdurkee.com/posts/taiwanblog/"
 
 
