made the link to taiwanblog workgit add .

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -29,6 +29,6 @@ title = "post categories"
 
   [[entries.entries]]
   title = "taiwan blog"
-  url = "elliotdurkee.com/posts/taiwanblog/"
+  url = "/posts/taiwanblog/"
 
 
