--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -31,6 +31,17 @@ title = "content categories"
   url = "/posts/photo_album/"
 
 [[entries]]
+title = "things I'm thinking about"
+
+  [[entries.entries]]
+  title = "The Philosophy of Clown"
+  url = "https://helikos737982018.files.wordpress.com/2021/03/useofclown.pdf"
+
+  [[entries.entries]]
+  title = "reductionism in psychiatry"
+  url = "http://web02.gonzaga.edu/faculty/norasakkunkit/2012_Kirmayer_Gold.pdf"
+
+[[entries]]
 title = "all posts"  
   
   [entries.post_list]
