modified recipies and fixed the menu link to the post

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -32,7 +32,7 @@ title = "content categories"
 
   [[entries.entries]]
   title = "veggie recipies"
-  url = "posts/myfavoriteveggierecipies.md/"
+  url = "posts/myfavoriteveggierecipies/"
 
 [[entries]]
 title = "things I'm thinking about"
