--- a/themes/nostyleplease/config.toml
+++ b/themes/nostyleplease/config.toml
@@ -32,4 +32,4 @@
   [params.theme_config]
     appearance = "light"
     back_home_text = ".."
-    date_format = "2006-01-02"
+    date_format = "2006.01.02"
