added salmon paper to things im thinking about on menu page

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -42,6 +42,9 @@ title = "things I'm thinking about"
   title = "reductionism in psychiatry"
   url = "http://web02.gonzaga.edu/faculty/norasakkunkit/2012_Kirmayer_Gold.pdf"
 
+  [[entries.entries]]
+  title = "scanning salmon, and why even science is subjective"
+  url = "http://prefrontal.org/files/posters/Bennett-Salmon-2009.pdf"
 [[entries]]
 title = "all posts"  
   
