changed layouts/index.html and added an entry to TITA

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -34,7 +34,12 @@ title = "content categories"
 [[entries]]
 title = "things I'm thinking about"
 
-  [[entries.entries]]
+ [[entries.entries]]
+  title = "Cephalopod Camoflauge"
+  url = 
+"https://www.nature.com/scitable/topicpage/cephalopod-camouflage-cells-and-organs-of-the-144048968/#:~:text=Chromatophores%20are%20organs%20that%20are,pigment%20expand%20under%20the%20skin"
+ 
+ [[entries.entries]]
   title = "The Philosophy of Clown"
   url = "https://helikos737982018.files.wordpress.com/2021/03/useofclown.pdf"
 
