changed title of main page and added photos to photoalbum

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://elliotdurkee.com/'
 languageCode = 'en-us'
-title = 'Harvests:'
+title = 'a little bit of everything'
 theme = 'nostyleplease'
