put title back cause cant figure out apostrophe

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://elliotdurkee.com/'
 languageCode = 'en-us'
-title = 'elliot\'s garden'
+title = 'a little bit of everything'
 theme = 'nostyleplease'
