got images to appear on illustration
'

--- a/themes/nostyleplease/data/menu.toml
+++ b/themes/nostyleplease/data/menu.toml
@@ -2,7 +2,7 @@
 title = "info"
 
   [[entries.entries]]
-  title = "email me"
+  title = "email me: youcangetelliot@gmail.com"
   url = "mailto:youcangetelliot@gmail.com"
 
   [[entries.entries]]
